# generic-agent

./: .env.example  .gitignore  EmergentplannerV4.ipynb  agent_config.example.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.skills/deep-research/: SKILL.md
.skills/deep-research/references/: report-template.md  source-quality.md  subagent-patterns.md  (+1 more)
docs/: ADK_MIGRATION.md  AGENTIC_ARCHITECTURE.md  AGENTIC_ARCHITECTURE_1PAGER.md  AGENT_PROFILES.md  DEVELOPER_ONBOARDING.md  PACKAGING.md  RELEASE_NOTES.md  SEARCH_TOOL.md  STREAMLIT_UI.md  SUBAGENTS.md
src/: __init__.py
src/emergent_planner/: __init__.py  cli.py  config.py  context_manager.py  debug_ui.py  graph.py  models.py  nodes.py  policies.py  prompt_loader.py  prompts.py  skills.py  tool_loader.py  tool_registry.py  tools.py  ui.py  ui_launcher.py  utils.py
src/src/: __init__.py
templates/specialized_agent_template/: README.md  pyproject.toml
templates/specialized_agent_template/config/: specialized_agent.yaml
templates/specialized_agent_template/custom_tools/: __init__.py  research.py
templates/specialized_agent_template/prompts/: research_guidelines.md
templates/specialized_agent_template/skills/domain-research/: SKILL.md
tests/: test_agent_profiles_framework.py  test_config.py  test_context_and_skills_utils.py  test_data_models_framework.py  test_nodes.py  test_office_tools.py  test_packaging.py  test_runtime_engine_factory.py  test_search_engine_and_registry.py  test_search_providers.py  test_search_ranking.py  test_skills_discovery_loading.py  test_subagents.py
(+20 files in other folders)
